fix input bar width on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
 
   .Input-bar {
     margin-top: 30px;
-    width: 85%;
+    width: 70%;
     padding: 30px;
     font-size: 1.15em;
     color: #153366;
